# AI_WRAPPER_PROJECTS

./: .gitignore  README.md  __main__.py  autha.py  config.yaml  data.py  expenses.db  fetch_asset_price.py  generate_genai.py  get_news.py  income.db  investment.py  main.py  parser.py  pyproject.toml  requirements.txt  temp.py
